--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p></p>
-
-
-
-<p></p>
+        <p>Hello,
+this is a website for coders.
+and 12me21.
+anyone else can help,
+but they will need to prove their trust to me by coding me a deadpool game.
+if you cannot do that, don't feel bad. 
+I can't do it either.</p>
       </section>
 
     </div>
